--- a/sass/_business.scss
+++ b/sass/_business.scss
@@ -22,26 +22,27 @@
       }
 
       &-title {
-        margin-top: 24px;
+        margin-top: 8px;
+        font-family: Manrope;
         font-style: normal;
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 29px;
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 125%;
         display: flex;
         align-items: center;
         text-align: center;
+        letter-spacing: -1px;
         color: #0c2c41;
       }
 
       &-description {
-        margin-top: 16px;
-        font-family: Roboto;
+        margin-top: 18px;
+        font-family: Comfortaa;
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
-        line-height: 24px;
+        font-size: 14px;
+        line-height: 135%;
         text-align: center;
-        letter-spacing: 0.202132px;
         color: #0c2c41;
       }
     }
