--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -1,16 +1,16 @@
 .banner {
   display: flex;
   flex-direction: column;
-  height: 1240px;
+  height: 345vw;
   padding: 0 16px;
   position: relative;
 
   &-bottom {
-    margin-top: auto;
-    padding-bottom: 80px;
+    transform: translate(0, -50%);
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: auto;
 
     &-title {
       font-style: normal;
@@ -19,7 +19,6 @@
       line-height: 48px;
       display: flex;
       align-items: center;
-      font-family: Inter;
       text-align: center;
       color: #0c2c41;
       width: 314px;
@@ -33,7 +32,6 @@
 
     &-description {
       margin-top: 17px;
-      font-family: Comfortaa;
       font-style: normal;
       font-weight: 400;
       font-size: 16px;
@@ -67,7 +65,6 @@
     justify-content: center;
 
     &-text {
-      font-family: $font;
       font-style: normal;
       font-weight: 700;
       font-size: 13px;
