--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -5,6 +5,15 @@
   padding: 0 16px;
   position: relative;
 
+  #countdown {
+    color: white;
+    font-size: 32px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 64px;
+  }
+
   &-bottom {
     transform: translate(0, -50%);
     display: flex;
