--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -28,7 +28,8 @@ main {
   background-image: url(./../images/BG.png);
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 80px;
+  padding-top: 25px;
+  background-position-y: bottom;
   // position: relative;
 
   // .bg-main {
